GeneWeb Version 1.10
--------------------

* GeneWeb daemon/CGI (gwd)
  - [28/12/98] Changed http requests to hold no accents.
  - [19/12/98] Fixed bug quotes disappearing in field "first name aliases"
    in form Update/Person (if the value holds quotes).
  - [18/12/98] No more HTML "table" used in relationship links with
    one branch (=> more compact display and visible in browsers
    without tables, e.g. "lynx"). Tried to generate more readable text
    when 2 branches when browser is "lynx".
  - [13/12/98] The directory cnt is no more searched in the directory where
    the daemon (or the CGI) is launched but in the base directory (option -bd
    of gwd; no difference if option -bd not used).
  - [13/12/98] In relationship links, display the ancestor couple (if both
    are ancestors).
--- [12/12/98..13/12/98] Added displaying of cousins.
  - [11/12/98] Fixed more bugs (accents) due to new ANSEL encoding.

* Gedcom to GeneWeb (ged2gwb)
  - [14/12/98] Fixed bug in Windows version (displaying "uncaught exception:
    Stream.Failure").

* GeneWeb compiler (gwc)
  - [02/01/99] Fixed missing accents displaying for undefined persons.    

* Lexicon file (lexicon.txt)
  - [15/12/98] Added some missing phrases in some languages (mainly Espagnol,
    Italian).
  - [11/12/98] Fixed bug and completed Dutch version (thanks to Joris Esch).

* Welcome files (xx/start.txt)
--- [06/01/99] Wizard and Friend accesses by navigator password.
  - [04/01/99] (de) Fixed some typo (thanks to Markus Mottl).
  - [11/12/98, 04/01/99] (nl) Fixed and completed (thanks to Joris Esch).

* GeneWeb uncompiler (gwu)
  - [12/12/98] Added option "-mem" to save memory space, but slower.

* Documentation
--- [04/01/99] Added dutch version (thanks to Joris Esch).

GeneWeb Version 1.09
--------------------

* Inside databases
--- Precisions of dates now apply not only for years, but for complete
    date. E.g. "maybe on september 1815" or "after september 23, 1815".