@@ -1,5 +1,5 @@
 (* camlp4r pa_extend.cmo ./pa_html.cmo *)
-(* $Id: gwd.ml,v 1.23 1999-01-06 10:47:44 ddr Exp $ *)
+(* $Id: gwd.ml,v 1.24 1999-01-06 12:14:57 ddr Exp $ *)
 
 open Config;
 open Def;
@@ -18,7 +18,6 @@ value log_flags =
 ;
 ifdef UNIX then
 value max_clients = ref None;
-value robot_xcl = ref None;
 value auth_file = ref "";
 
 value log_oc () =
@@ -583,8 +582,7 @@ Type control C to stop the service
      else ();
   return
   Wserver.f port_selected.val tmout
-    (ifdef UNIX then max_clients.val else None) robot_xcl.val
-    (connection False)
+    (ifdef UNIX then max_clients.val else None) (connection False)
 ;
 
 value geneweb_cgi str addr =
@@ -649,26 +647,6 @@ value arg_parse_in_file fname speclist anonfun errmsg =
   | _ -> () ]
 ;
 
-module G = Grammar.Make (struct value lexer = Plexer.make (); end);
-value robot_xcl_arg = G.Entry.create "robot_xcl arg";
-GEXTEND G
-  robot_xcl_arg:
-    [ [ cnt = INT; ","; sec = INT; EOI ->
-          (int_of_string cnt, int_of_string sec) ] ];
-END;
-
-value robot_exclude s =
-  try
-    robot_xcl.val :=
-      Some (G.Entry.parse robot_xcl_arg (G.parsable (Stream.of_string s)))
-  with
-  [ Stdpp.Exc_located _ (Stream.Error _ | Token.Error _) ->
-      do Printf.eprintf "Bad use of option -robot_xcl\n";
-         Printf.eprintf "Use option -help for usage.\n";
-         flush Pervasives.stderr;
-      return exit 2 ]
-;
-
 value main () =
   let usage = "Usage: " ^ Sys.argv.(0) ^ " [options] where options are:" in
   let speclist =
@@ -715,10 +693,7 @@ value main () =
                 raise (Arg.Bad "number expected after -max_clients")),
          "<num>
        Max number of clients treated at the same time (default: no limit)
-       (not cgi).");
-        ("-robot_xcl", Arg.String robot_exclude,
-         "<cnt>,<sec>
-       Exclude connections when more than <cnt> requests in <sec> seconds.")]
+       (not cgi).")]
      else []]
   in
   let anonfun s = raise (Arg.Bad ("don't know what to do with " ^ s)) in
